# src/main/java/nh/recipify/domain/api/RecipeDto.java
@@ -19,7 +19,8 @@ public record RecipeDto(
     @NotNull List<CategoryDto> categories,
     @NotNull String mealType,
     @NotNull double averageRating,
-    @NotNull int likes
+    @NotNull int likes,
+    @NotNull String image
 ) {
 
     public static RecipeDto forRecipe(Recipe r) {
@@ -34,7 +35,8 @@ public record RecipeDto(
             r.getCategories().stream().map(CategoryDto::of).toList(),
             r.getMealType().getName(),
             r.getFeedbacks().stream().mapToInt(Feedback::getRating).average().orElse(0),
-            r.getLikes()
+            r.getLikes(),
+            r.getImage().orElse("/images/recipes/placeholder.png")
         );
     }
 
